# esp32-embassy-kickstart

./: .dockerignore  .gitignore  Cargo.toml  Clippy.toml  Makefile  README.md  build.rs  docker-compose.yaml  partitions.csv
.cargo/: config.toml
.github/workflows/: main.yml
dockerfiles/: Dockerfile  entrypoint.sh
src/: config.rs  db.rs  http.rs  log_utils.rs  macros.rs  main.rs  main_core.rs  mqtt_config.rs  neopixel.rs  ota.rs  partitions.csv  second_core.rs  shared.rs  web_server.rs  wifi.rs  wifi_config.rs
src/http/: index.css  index.html  index.js
