[package]
edition = "2024"
name    = "esp32-embassy-kickstart"
version = "0.2.1"
resolver = "2"

[package.metadata.espflash]
partition_table = "partitions.csv"

[[bin]]
name = "firmware"
path = "./src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns",
  "medium-ethernet",
  "proto-ipv4",
] }

esp-alloc = "0.8.0"
esp-hal = { version = "1.0.0-beta.0", features = ["esp32s3", "unstable"] }

embassy-executor = { version = "0.7.0", features = ["nightly"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embassy-futures = {version = "0.1.1"}
esp-hal-embassy = { version = "0.8.1", features = ["esp32s3"] }
embassy-sync = "0.6.2"
esp-wifi = { version = "0.14.1", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32s3",
  "wifi",
], default-features = false }
edge-dhcp = {version = "0.6.0"}
edge-nal = {version = "0.5.0"}
edge-nal-embassy = {version = "0.6.0", features = ["proto-ipv4", "udp"], default-features = false}
heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }
esp-println = {version = "0.14.0", features = ["esp32s3", "log-04"]}
log = { version = "0.4.27" }
esp-backtrace = {version = "0.16.0", features = ["esp32s3", "exception-handler", "panic-handler", "println"]}

picoserve = { version = "0.16.0", features = ["embassy"] }
serde = { version = "1.0.219", features = ["derive"], default-features = false }
# HTTP
reqwless = { version = "0.13", default-features = false, features = [] }

# Neopixel
esp-hal-smartled = { git = "https://github.com/telenkov88/esp-hal-community.git", branch = "v1.0.0-beta.1"}
smart-leds = "0.4.0"

# Filesystem
esp-storage = {version = "0.6.0", features = ["esp32s3"]}
embedded-storage = { version = "0.3.1" }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal"}
embedded-storage-async = { version = "0.4.1" }
ekv = {version = "1.0.0"}

embassy-embedded-hal = {version = "0.3.0"}

[profile.dev]
opt-level = "s"

[profile.dev.package.esp-storage]
opt-level = 3


[profile.release]
codegen-units    = 1
debug            = 2
strip = true
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
